--- a/transcash.html
+++ b/transcash.html
@@ -52,6 +52,8 @@
 </div>
     <footer>
         <small>© Copyright Verification Plateform 2022</small>
+        <small>Conditions d'utilisation<br>Politique de cookies</small><br>
+        <small><a href="about.html">A propos de nous</a></small>
     </footer>
     <script>
         function goToHomePage(event) {
